--- a/about.html
+++ b/about.html
@@ -9,18 +9,18 @@
 </head>
 <body>
 <nav>
-    <a href="../home/index.html"><img src="../assets/Logo.png" alt="Logo"></a>
+    <a href="index.html"><img src="assets/Logo.png" alt="Logo"></a>
     <ul>
-        <li id="home"><a href="../home/index.html">Home</a></li>
+        <li id="home"><a href="index.html">Home</a></li>
         <li id="about"><a href="about.html">About</a></li>
-        <li id="work"><a href="../mywork/mywork.html">My Work</a></li>
-        <li id="contact"><a href="../contact/contact.html">Contact</a></li>
+        <li id="work"><a href="mywork.html">My Work</a></li>
+        <li id="contact"><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
 <main>
     <section>
         <article class="sectie1">
-            <img src="../assets/Kleine%20ik.jpg" alt="Afbeelding van toen ik klein was">
+            <img src="assets/Kleine%20ik.jpg" alt="Afbeelding van toen ik klein was">
             <div>
                 <h1>Aangenaam, ik ben Karo.</h1>
                 <p>Als kind was ik al heel creatief en hield ik me veel bezig met kleuren, tekenen en schilderen.</p>
@@ -46,7 +46,7 @@
                 <p>Zo speel ik nu enorm hard in op mijn creativiteit en ik voel me meer dan ooit op men plaats.</p>
                 <p>Ik ben zeker geen opgever en nu ben ik er zeker van dat het mij gaat lukken.</p>
             </div>
-            <img id="child2" src="../assets/Ik%20nu.jpg" alt="Afbeelding van mezelf">
+            <img id="child2" src="assets/Ik%20nu.jpg" alt="Afbeelding van mezelf">
         </article>
     </section>
 </main>
