--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <nav>
-    <a href="index.html"><img src="../assets/Logo.png" alt="Logo"></a>
+    <a href="index.html"><img src="assets/Logo.png" alt="Logo"></a>
     <ul>
         <li id="home"><a href="index.html">Home</a></li>
-        <li id="about"><a href="../about/about.html">About</a></li>
-        <li id="work"><a href="../mywork/mywork.html">My Work</a></li>
-        <li id="contact"><a href="../contact/contact.html">Contact</a></li>
+        <li id="about"><a href="about.html">About</a></li>
+        <li id="work"><a href="mywork.html">My Work</a></li>
+        <li id="contact"><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
 <main>
@@ -26,7 +26,7 @@
         <p>dan wens ik u het beste toe.</p>
     </div>
     <div id="cv">
-        <a href="../assets/CURRICULUM%20VITAE%20Karo%20Voets.pdf" download="CURRICULUM_VITAE_Karo_Voets">Mijn CV</a>
+        <a href="assets/CURRICULUM%20VITAE%20Karo%20Voets.pdf" download="CURRICULUM_VITAE_Karo_Voets">Mijn CV</a>
     </div>
 </main>
 </body>
