--- a/oefening3.html
+++ b/oefening3.html
@@ -25,7 +25,7 @@
 <main>
     <section>
         <h2>Welkom - Wie zijn wij</h2>
-        <img src="../assets/alpacateddy.jpg" alt="alpaca's">
+        <img src="assets/alpacateddy.jpg" alt="alpaca's">
         <p>Enkele jaren geleden hebben wij, Natasha en Kevin, een alpacaboerderij opgericht om verwaarloosde alpaca's
             een goede thuis te geven. We zijn gestart met twee alpaca's en ondertussen vangen we permanent ongeveer 25
             alpaca's op.
