--- a/oefening4.html
+++ b/oefening4.html
@@ -55,18 +55,18 @@
         </ol>
     </section>
     <section id="sectionright">
-        <img src="../assets/spaghetti.png" alt="spaghettibord">
+        <img src="assets/spaghetti.png" alt="spaghettibord">
         <h2>Misschien lust je dit ook wel?</h2>
         <article>
-            <img src="../assets/extra1.png" alt="thais">
+            <img src="assets/extra1.png" alt="thais">
             <h4>Spaghetti bolognaise op z'n Thais</h4>
         </article>
         <article>
-            <img src="../assets/extra2.png" alt="linzenbord">
+            <img src="assets/extra2.png" alt="linzenbord">
             <h4>Spaghetti bolognaise met linzen</h4>
         </article>
         <article>
-            <img src="../assets/extra3.png" alt="pancettakerstomaat">
+            <img src="assets/extra3.png" alt="pancettakerstomaat">
             <h4>Spaghetti met pancetta en kerstomaat</h4>
         </article>
     </section>
