--- a/webstorm.html
+++ b/webstorm.html
@@ -9,37 +9,37 @@
 </head>
 <body>
 <nav>
-    <a href="../home/index.html"><img src="../assets/Logo.png" alt="Logo"></a>
+    <a href="index.html"><img src="assets/Logo.png" alt="Logo"></a>
     <ul>
-        <li id="home"><a href="../home/index.html">Home</a></li>
-        <li id="about"><a href="../about/about.html">About</a></li>
-        <li id="work"><a href="../mywork/mywork.html">My Work</a></li>
-        <li id="contact"><a href="../contact/contact.html">Contact</a></li>
+        <li id="home"><a href="index.html">Home</a></li>
+        <li id="about"><a href="about.html">About</a></li>
+        <li id="work"><a href="mywork.html">My Work</a></li>
+        <li id="contact"><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
 <header>
     <h1>Webstorm</h1>
-    <a href="../mywork/mywork.html" id="terug">Ga terug</a>
+    <a href="mywork.html" id="terug">Ga terug</a>
 </header>
 <main>
     <section>
         <h2>Spaghetti</h2>
-        <img src="../assets/spag.jpg" alt="Spaghetti recept">
+        <img src="assets/spag.jpg" alt="Spaghetti recept">
         <a href="oefening4.html" target="_blank">Bekijk project</a>
     </section>
     <section>
         <h2>Spelconsoles</h2>
-        <img src="../assets/spel.png" alt="Spelconsoles">
+        <img src="assets/spel.png" alt="Spelconsoles">
         <a href="oefening2.html" target="_blank">Bekijk project</a>
     </section>
     <section>
         <h2>Alpaca</h2>
-        <img src="../assets/alpaca.png" alt="Alpaca site">
+        <img src="assets/alpaca.png" alt="Alpaca site">
         <a href="oefening3.html" target="_blank">Bekijk project</a>
     </section>
     <section>
         <h2>Tech blog</h2>
-        <img src="../assets/tech.png" alt="Tech blog">
+        <img src="assets/tech.png" alt="Tech blog">
         <a href="oefening4.1.html" target="_blank">Bekijk project</a>
     </section>
 </main>
