--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 <nav>
-    <a href="../home/index.html"><img src="../assets/Logo.png" alt="Logo"></a>
+    <a href="index.html"><img src="assets/Logo.png" alt="Logo"></a>
     <ul>
-        <li id="home"><a href="../home/index.html">Home</a></li>
-        <li id="about"><a href="../about/about.html">About</a></li>
-        <li id="work"><a href="../mywork/mywork.html">My Work</a></li>
+        <li id="home"><a href="index.html">Home</a></li>
+        <li id="about"><a href="about.html">About</a></li>
+        <li id="work"><a href="mywork.html">My Work</a></li>
         <li id="contact"><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
