--- a/mywork.html
+++ b/mywork.html
@@ -9,29 +9,29 @@
 </head>
 <body>
 <nav>
-    <a href="../home/index.html"><img src="../assets/Logo.png" alt="Logo"></a>
+    <a href="index.html"><img src="assets/Logo.png" alt="Logo"></a>
     <ul>
-        <li id="home"><a href="../home/index.html">Home</a></li>
-        <li id="about"><a href="../about/about.html">About</a></li>
+        <li id="home"><a href="index.html">Home</a></li>
+        <li id="about"><a href="about.html">About</a></li>
         <li id="work"><a href="mywork.html">My Work</a></li>
-        <li id="contact"><a href="../contact/contact.html">Contact</a></li>
+        <li id="contact"><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
 <div class="projecten">
     <section>
-        <img src="../assets/Webstorm-1.png" alt="Webstorm">
+        <img src="assets/Webstorm-1.png" alt="Webstorm">
         <a href="../../portfolio_karo/work_pages/webstorm.html">Bekijk mijn projecten</a>
     </section>
     <section>
-        <img src="../assets/Photoshop-1.png" alt="Photoshop">
+        <img src="assets/Photoshop-1.png" alt="Photoshop">
         <a href="../../portfolio_karo/work_pages/photoshop.html">Bekijk mijn projecten</a>
     </section>
     <section>
-        <img src="../assets/XD-1.png" alt="Adobe XD">
+        <img src="assets/XD-1.png" alt="Adobe XD">
         <a href="../../portfolio_karo/work_pages/xd.html">Bekijk mijn projecten</a>
     </section>
     <section>
-        <img src="../assets/Illustrator-1.png" alt="Illustrator">
+        <img src="assets/Illustrator-1.png" alt="Illustrator">
         <a href="../../portfolio_karo/work_pages/illustrator.html">Bekijk mijn projecten</a>
     </section>
 </div>
