--- a/mywork.html
+++ b/mywork.html
@@ -20,19 +20,19 @@
 <div class="projecten">
     <section>
         <img src="assets/Webstorm-1.png" alt="Webstorm">
-        <a href="../../portfolio_karo/work_pages/webstorm.html">Bekijk mijn projecten</a>
+        <a href="webstorm.html">Bekijk mijn projecten</a>
     </section>
     <section>
         <img src="assets/Photoshop-1.png" alt="Photoshop">
-        <a href="../../portfolio_karo/work_pages/photoshop.html">Bekijk mijn projecten</a>
+        <a href="photoshop.html">Bekijk mijn projecten</a>
     </section>
     <section>
         <img src="assets/XD-1.png" alt="Adobe XD">
-        <a href="../../portfolio_karo/work_pages/xd.html">Bekijk mijn projecten</a>
+        <a href="xd.html">Bekijk mijn projecten</a>
     </section>
     <section>
         <img src="assets/Illustrator-1.png" alt="Illustrator">
-        <a href="../../portfolio_karo/work_pages/illustrator.html">Bekijk mijn projecten</a>
+        <a href="illustrator.html">Bekijk mijn projecten</a>
     </section>
 </div>
 </body>
