--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>dan wens ik u het beste toe.</p>
     </div>
     <div id="cv">
-        <a href="assets/CURRICULUM%20VITAE%20Karo%20Voets.pdf" download="CURRICULUM_VITAE_Karo_Voets">Mijn CV</a>
+        <a href="assets/Curriculum_Vitae_Karo_Voets.pdf" download="CURRICULUM_VITAE_Karo_Voets">Mijn CV</a>
     </div>
 </main>
 </body>
