--- a/about.html
+++ b/about.html
@@ -3,21 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
-    <link rel="stylesheet" href="about.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=PT+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/jyb6qri.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2fb07d68d9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
-<nav>
-    <a href="index.html"><img src="assets/Logo.png" alt="Logo"></a>
-    <ul>
-        <li id="home"><a href="index.html">Home</a></li>
-        <li id="about"><a href="about.html">About</a></li>
-        <li id="work"><a href="mywork.html">My Work</a></li>
-        <li id="contact"><a href="contact.html">Contact</a></li>
-    </ul>
+<nav class="navbar navbar-expand-lg">
+
+    <div class="container">
+        <a href="index.html" class="navbar-brand">
+            <img id="nav" src="assets/Logo.png" alt="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link homepage" target="_self" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link aboutlink" target="_self" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link webshop" target="_self" href="mywork.html">My work</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_self" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
+
 <main>
     <section>
         <article class="sectie1">
