--- a/about.html
+++ b/about.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=PT+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/jyb6qri.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/2fb07d68d9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="about.css">
 </head>
@@ -42,37 +45,83 @@
 </nav>
 
 <main>
-    <section>
-        <article class="sectie1">
-            <img src="assets/Kleine%20ik.jpg" alt="Afbeelding van toen ik klein was">
-            <div>
-                <h1>Aangenaam, ik ben Karo.</h1>
-                <p>Als kind was ik al heel creatief en hield ik me veel bezig met kleuren, tekenen en schilderen.</p>
-                <p>Iets waar ik me urenlang mee kon bezighouden en waar ik ook steeds heel trots op was.</p>
-                <p>Ik hield me er dan ook meer en meer mee bezig en testte zoveel mogelijk uit.</p>
-                <p>Op papier met copic markers, zo werd ik helemaal verliefd op het tekenen.</p>
-                <br>
-                <p>Maar in mijn tiener jaren kreeg ik andere prioriteiten en zette ik mijn creatieve passies aan de
-                    kant.</p>
-                <p>Als ik kijk naar mezelf dan zie ik iemand met doorzettingsvermogen, empathie en enthousiasme.</p>
-                <p>Ik ben zeker geen opgever en wil dan ook alles tot een goed einde brengen</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-4 top1">
+                <div class="row">
+                    <div class="col-2 col-md-3"></div>
+                    <div class="col-8 col-md-9">
+                        <img src="assets/Kleine%20ik.jpg" alt="Afbeelding van toen ik klein was">
+                    </div>
+                    <div class="col-2 col-md-0"></div>
+                </div>
             </div>
-        </article>
-        <article class="sectie2">
-            <div id="child1">
-                <p>Toen ik ging verder studeren verliep niet alles zoals gepland.</p>
-                <p>Ik probeerde mijn pad te vinden en probeerde richtingen die inspeelde op mijn empathie.</p>
-                <p>Zo ben ik tegen veel muren gebotst, wat me bracht tot september 2022.</p>
-                <p>Of ik probeerde het nog één keer of ik gaf op.</p>
-                <br>
-                <p>Maar zoals ik al eerder aangaf ben ik iemand met doorzettingsvermogen.</p>
-                <p>Ik nam een grote draai en koos voor de richting "Digitale vormgeving".</p>
-                <p>Zo speel ik nu enorm hard in op mijn creativiteit en ik voel me meer dan ooit op men plaats.</p>
-                <p>Ik ben zeker geen opgever en nu ben ik er zeker van dat het mij gaat lukken.</p>
+
+            <div class="col-12 col-md-8 top2">
+                <div class="row">
+                    <div class="col-2"></div>
+                    <div class="col-8 pt-4">
+                        <h1>Aangenaam, ik ben Karo.</h1>
+                        <p>Als kind was ik al heel creatief en hield ik me veel bezig met kleuren, tekenen en
+                            schilderen. Iets waar ik me urenlang mee kon bezighouden en waar ik ook steeds heel trots op was.</p>
+                        <p>Ik hield me er dan ook meer en meer mee bezig en testte zoveel mogelijk uit. Op papier met copic markers, zo werd ik helemaal verliefd op het tekenen.</p>
+                        <br>
+                        <p>Maar in mijn tiener jaren kreeg ik andere prioriteiten en zette ik mijn creatieve passies aan
+                            de
+                            kant.</p>
+                        <p>Als ik kijk naar mezelf dan zie ik iemand met doorzettingsvermogen, empathie en
+                            enthousiasme. Ik ben zeker geen opgever en wil dan ook alles tot een goed einde brengen</p>
+                    </div>
+                    <div class="col-2"></div>
+                </div>
             </div>
-            <img id="child2" src="assets/Ik%20nu.jpg" alt="Afbeelding van mezelf">
-        </article>
-    </section>
+        </div>
+
+        <div class="row pt-md-5">
+            <div class="col-12 col-md-8">
+                <div class="row pt-5">
+                    <div class="col-2"></div>
+                    <div class="col-8">
+                        <p>Toen ik ging verder studeren verliep niet alles zoals gepland.</p>
+                        <p>Ik probeerde mijn pad te vinden en probeerde richtingen die inspeelde op mijn empathie.</p>
+                        <p>Zo ben ik tegen veel muren gebotst, wat me bracht tot september 2022.</p>
+                        <p>Of ik probeerde het nog één keer of ik gaf op.</p>
+                        <br>
+                        <p>Maar zoals ik al eerder aangaf ben ik iemand met doorzettingsvermogen.</p>
+                        <p>Ik nam een grote draai en koos voor de richting "Digitale vormgeving".</p>
+                        <p>Zo speel ik nu enorm hard in op mijn creativiteit en ik voel me meer dan ooit op men plaats.</p>
+                        <p>Ik ben zeker geen opgever en nu ben ik er zeker van dat het mij gaat lukken.</p>
+                    </div>
+                    <div class="col-2"></div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-4 pt-4 pb-5 pt-md-0">
+                <div class="row">
+                    <div class="col-2 col-md-0"></div>
+                    <div class="col-8 col-md-9">
+                        <img id="child2" src="assets/Ik%20nu.jpg" alt="Afbeelding van mezelf">
+                    </div>
+                    <div class="col-2 col-md-3"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
+
+    <footer>
+        <div class="container pb-0">
+            <ul class="col-12 list-unstyled justify-content-center d-flex">
+                <li>
+                    <a href="https://linkedin.com" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <i class="fa-brands fa-square-facebook"></i></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
