--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=PT+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/jyb6qri.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/2fb07d68d9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg">
@@ -55,14 +58,16 @@
                 <div class="row">
                     <div class="col-1"></div>
                     <div class="col-10">
-                        <p>Welkom op mijn portfolio. Ik kijk er naar uit om in contact te komen met u. Als dit niet het geval is en ik zie u nooit meer terug, dan wens ik u het beste toe.</p>
+                        <p>Welkom op mijn portfolio. Ik kijk er naar uit om in contact te komen met u. Als dit niet het
+                            geval is en ik zie u nooit meer terug, dan wens ik u het beste toe.</p>
                     </div>
                     <div class="col-1"></div>
                 </div>
                 <div class="row button_cv">
                     <div class="col-1"></div>
                     <div class="col-4 cv">
-                        <a href="assets/Curriculum_Vitae_Karo_Voets.pdf" download="CURRICULUM_VITAE_Karo_Voets">Mijn CV</a>
+                        <a href="assets/Curriculum_Vitae_Karo_Voets.pdf" download="CURRICULUM_VITAE_Karo_Voets">Mijn
+                            CV</a>
                     </div>
                     <div class="col-7"></div>
                 </div>
@@ -73,5 +78,20 @@
         </div>
     </div>
 </main>
+
+<footer>
+    <div class="container pb-0">
+            <ul class="col-12 list-unstyled justify-content-center d-flex">
+                <li>
+                    <a href="https://linkedin.com" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <i class="fa-brands fa-square-facebook"></i></a>
+                </li>
+            </ul>
+    </div>
+</footer>
 </body>
 </html>
