--- a/mywork.html
+++ b/mywork.html
@@ -59,5 +59,20 @@
         <a href="illustrator.html">Bekijk mijn projecten</a>
     </section>
 </div>
+
+<footer>
+    <div class="container pb-0">
+        <ul class="col-12 list-unstyled justify-content-center d-flex">
+            <li>
+                <a href="https://linkedin.com" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank">
+                    <i class="fa-brands fa-square-facebook"></i></a>
+            </li>
+        </ul>
+    </div>
+</footer>
 </body>
 </html>
