--- a/mywork.html
+++ b/mywork.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=PT+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/jyb6qri.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/2fb07d68d9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="mywork.css">
 </head>
@@ -41,24 +44,79 @@
     </div>
 </nav>
 
-<div class="projecten">
-    <section>
-        <img src="assets/Webstorm-1.png" alt="Webstorm">
-        <a href="webstorm.html">Bekijk mijn projecten</a>
-    </section>
-    <section>
-        <img src="assets/Photoshop-1.png" alt="Photoshop">
-        <a href="photoshop.html">Bekijk mijn projecten</a>
-    </section>
-    <section>
-        <img src="assets/XD-1.png" alt="Adobe XD">
-        <a href="xd.html">Bekijk mijn projecten</a>
-    </section>
-    <section>
-        <img src="assets/Illustrator-1.png" alt="Illustrator">
-        <a href="illustrator.html">Bekijk mijn projecten</a>
-    </section>
-</div>
+<main>
+    <div class="container">
+        <div class="row top">
+            <div class="col-1"></div>
+            <div class="col-5">
+                <h1>My work</h1>
+            </div>
+            <div class="col-6"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-12 col-md-2">
+                <div class="row pb-4">
+                    <div class="col-3 col-md-0"></div>
+                    <div class="col-6 col-md-12">
+                        <button type="button" class="btn">
+                            <a href="photoshop.html"><img src="assets/Photoshop-1.png" alt="Photoshop"></a>
+                        </button>
+                    </div>
+                    <div class="col-3 col-md-0"></div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-2">
+                <div class="row pb-4">
+                    <div class="col-3 col-md-0"></div>
+                    <div class="col-6 col-md-12">
+                        <button type="button" class="btn">
+                            <a href="xd.html"><img src="assets/XD-1.png" alt="Adobe XD"></a>
+                        </button>
+                    </div>
+                    <div class="col-3 col-md-0"></div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-2">
+                <div class="row pb-4">
+                    <div class="col-3 col-md-0"></div>
+                    <div class="col-6 col-md-12">
+                        <button type="button" class="btn">
+                            <a href="illustrator.html"><img src="assets/Illustrator-1.png" alt="Illustrator"></a>
+                        </button>
+                    </div>
+                    <div class="col-3 col-md-0"></div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-2">
+                <div class="row pb-4">
+                    <div class="col-3 col-md-0"></div>
+                    <div class="col-6 col-md-12">
+                        <button type="button" class="btn">
+                            <a href="webstorm.html"><img src="assets/Webstorm-1.png" alt="Webstorm"></a>
+                        </button>
+                    </div>
+                    <div class="col-3 col-md-0"></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-2">
+                <div class="row pb-4">
+                    <div class="col-3 col-md-0"></div>
+                    <div class="col-6 col-md-12">
+                        <button type="button" class="btn">
+                            <a href="webstorm.html"><img src="assets/WPL-1.png" alt="WPL"></a>
+                        </button>
+                    </div>
+                    <div class="col-3 col-md-0"></div>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+    </div>
+</main>
 
 <footer>
     <div class="container pb-0">
