--- a/mywork.html
+++ b/mywork.html
@@ -107,7 +107,7 @@
                     <div class="col-3 col-md-0"></div>
                     <div class="col-6 col-md-12">
                         <button type="button" class="btn">
-                            <a href="webstorm.html"><img src="assets/WPL-1.png" alt="WPL"></a>
+                            <a href="wpl.html"><img src="assets/WPL-1.png" alt="WPL"></a>
                         </button>
                     </div>
                     <div class="col-3 col-md-0"></div>
