--- a/wpl.html
+++ b/wpl.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Photoshop</title>
+    <title>WPL</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=PT+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/jyb6qri.css">
@@ -49,7 +49,7 @@
         <div class="row top">
             <div class="col-1"></div>
             <div class="col-3">
-                <h1>Photoshop</h1>
+                <h1>Werkplekleren</h1>
             </div>
             <div class="col-8"></div>
         </div>
@@ -67,7 +67,9 @@
                 <div class="row pb-5">
                     <div class="col-1"></div>
                     <div class="col-10">
-                        <img src="assets/tea.png" alt="Thee reclame">
+                        <a href="assets/POP_Opdrachten_Karo_Voets_1DVOB.pdf" download="POP_Opdrachten_Karo_Voets" target="_blank">
+                            <img class="wpl_img" src="assets/waarden.png" alt="POP opdrachten">
+                        </a>
                     </div>
                     <div class="col-1"></div>
                 </div>
@@ -76,7 +78,9 @@
                 <div class="row pb-5">
                     <div class="col-1"></div>
                     <div class="col-10">
-                        <img src="assets/tiger.jpg" alt="Tijger">
+                        <a href="assets/Reflectie-Seminaries_en_Analyse-Arbeidsmarkt_Karo_Voets_1DVOB.pdf" download="Reflectie-Seminaries_en_Analyse-Arbeidsmarkt_Karo_Voets" target="_blank">
+                            <img class="wpl_img" src="assets/Seminaries.jpg" alt="Reflectie seminaries + analyse arbeidsmarkt">
+                        </a>
                     </div>
                     <div class="col-1"></div>
                 </div>
@@ -87,7 +91,9 @@
                 <div class="row pb-5">
                     <div class="col-1"></div>
                     <div class="col-10">
-                        <img src="assets/Walibi_afb.png" alt="Walibi Reclame">
+                        <a href="assets/Dashboard_Lennie_Celle_Karo_1DVO.pdf" download="Dashboard_Lennie_Celle_Karo_1DVO" target="_blank">
+                            <img class="wpl_img" src="assets/Dashboard.png" alt="Dashboard">
+                        </a>
                     </div>
                     <div class="col-1"></div>
                 </div>
@@ -96,7 +102,35 @@
                 <div class="row pb-5">
                     <div class="col-1"></div>
                     <div class="col-10">
-                        <img src="assets/BA_afb.png" alt="Brussels Airlines Reclame">
+                        <a href="assets/Eindreflectie_Karo_Voets_1DVOB.pdf" download="Eindreflectie_Karo_Voets_1DVOB" target="_blank">
+                            <img class="wpl_img" src="assets/Eindreflectie.png" alt="Eindreflectie">
+                        </a>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <a href="assets/PDF/WPL2_Case_Karo_Voets.pdf" download="WPL2_Case_Karo_Voets" target="_blank">
+                            <img class="wpl_img" src="assets/Logo_Groot.png" alt="Dashboard">
+                        </a>
+                        <button type="button" class="btn guide">
+                            <a href="assets/PDF/Brandguide_Ori.pdf" download="Brandguide_Ori_Karo_Voets">Download hier de brandguide</a></button>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <a href="assets/Eindreflectie2_Karo_Voets_1DVOB.pdf" download="Eindreflectie_Karo_Voets_1DVOB" target="_blank">
+                            <img class="wpl_img" src="assets/Eindreflectie2.png" alt="Eindreflectie">
+                        </a>
                     </div>
                     <div class="col-1"></div>
                 </div>
