--- a/illustrator.html
+++ b/illustrator.html
@@ -3,45 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <title>Illustrator</title>
-    <link rel="stylesheet" href="mywork-page.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=PT+Serif&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/jyb6qri.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2fb07d68d9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="mywork-page.css">
 </head>
 <body>
-<nav>
-    <a href="index.html"><img src="assets/Logo.png" alt="Logo"></a>
-    <ul>
-        <li id="home"><a href="index.html">Home</a></li>
-        <li id="about"><a href="about.html">About</a></li>
-        <li id="work"><a href="mywork.html">My Work</a></li>
-        <li id="contact"><a href="contact.html">Contact</a></li>
-    </ul>
+<nav class="navbar navbar-expand-lg">
+
+    <div class="container">
+        <a href="index.html" class="navbar-brand">
+            <img id="nav" src="assets/Logo.png" alt="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link homepage" target="_self" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_self" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link webshop worklink" target="_self" href="mywork.html">My work</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_self" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
-<header>
-    <h1>Illustrator</h1>
-    <a href="mywork.html" id="terug">Ga terug</a>
-</header>
+
 <main>
-    <section>
-        <h2>Logo Booktopia</h2>
-        <img src="assets/Booktopia%20mockup%201.3.jpg" alt="Booktopia">
-        <a href="assets/Booktopia.pdf" download="Booktopia_Karo_Voets" target="_blank">Bekijk project</a>
-    </section>
-    <section>
-        <h2>Logo Bloom's</h2>
-        <img src="assets/Card_Mockup_Bloom's.jpg" alt="Blooms">
-        <a href="assets/PDF/Design%20proces%20-%20GS2.pdf" download="Blooms_Karo_Voets" target="_blank">Bekijk project</a>
-    </section>
-    <section>
-        <h2>Fontfolio Blenny</h2>
-        <img src="assets/Blenny.png" alt="Blenny">
-        <a href="assets/PDF/Fontfolio%20-%20GS2.pdf" download="Fontfolio_Karo_Voets" target="_blank">Bekijk project</a>
-    </section>
-    <section>
-        <h2>Logo Ori</h2>
-        <img src="assets/Logo_Groot.png" alt="Logo Ori">
-        <a href="assets/PDF/Ori.pdf" download="Ori_Karo_Voets" target="_blank">Bekijk project</a>
-    </section>
+    <div class="container">
+        <div class="row top">
+            <div class="col-1"></div>
+            <div class="col-3">
+                <h1>Illustrator</h1>
+            </div>
+            <div class="col-8"></div>
+        </div>
+        <div class="row terug">
+            <div class="col-1"></div>
+            <div class="col-5">
+                <button type="button" class="btn">
+                    <a href="mywork.html" id="terug">Ga terug</a>
+                </button>
+            </div>
+            <div class="col-6"></div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <img src="assets/Booktopia%20mockup%201.3.jpg" alt="Booktopia">
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 tijger">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <img src="assets/Card_Mockup_Bloom's.jpg" alt="Blooms">
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <img src="assets/Blenny.png" alt="Blenny">
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <img src="assets/Logo_Groot.png" alt="Logo Ori">
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
+
+<footer>
+    <div class="container pb-0">
+        <ul class="col-12 list-unstyled justify-content-center d-flex">
+            <li>
+                <a href="https://linkedin.com" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank">
+                    <i class="fa-brands fa-square-facebook"></i></a>
+            </li>
+        </ul>
+    </div>
+</footer>
 </body>
 </html>
