--- a/about.html
+++ b/about.html
@@ -63,8 +63,10 @@
                     <div class="col-8 pt-4">
                         <h1>Aangenaam, ik ben Karo.</h1>
                         <p>Als kind was ik al heel creatief en hield ik me veel bezig met kleuren, tekenen en
-                            schilderen. Iets waar ik me urenlang mee kon bezighouden en waar ik ook steeds heel trots op was.</p>
-                        <p>Ik hield me er dan ook meer en meer mee bezig en testte zoveel mogelijk uit. Op papier met copic markers, zo werd ik helemaal verliefd op het tekenen.</p>
+                            schilderen. Iets waar ik me urenlang mee kon bezighouden en waar ik ook steeds heel trots op
+                            was.</p>
+                        <p>Ik hield me er dan ook meer en meer mee bezig en testte zoveel mogelijk uit. Op papier met
+                            copic markers, zo werd ik helemaal verliefd op het tekenen.</p>
                         <br>
                         <p>Maar in mijn tiener jaren kreeg ik andere prioriteiten en zette ik mijn creatieve passies aan
                             de
@@ -77,7 +79,7 @@
             </div>
         </div>
 
-        <div class="row pt-md-5">
+        <div class="row pt-md-5 pb-md-5">
             <div class="col-12 col-md-8">
                 <div class="row pt-5">
                     <div class="col-2"></div>
@@ -89,7 +91,8 @@
                         <br>
                         <p>Maar zoals ik al eerder aangaf ben ik iemand met doorzettingsvermogen.</p>
                         <p>Ik nam een grote draai en koos voor de richting "Digitale vormgeving".</p>
-                        <p>Zo speel ik nu enorm hard in op mijn creativiteit en ik voel me meer dan ooit op men plaats.</p>
+                        <p>Zo speel ik nu enorm hard in op mijn creativiteit en ik voel me meer dan ooit op men
+                            plaats.</p>
                         <p>Ik ben zeker geen opgever en nu ben ik er zeker van dat het mij gaat lukken.</p>
                     </div>
                     <div class="col-2"></div>
@@ -109,19 +112,19 @@
     </div>
 </main>
 
-    <footer>
-        <div class="container pb-0">
-            <ul class="col-12 list-unstyled justify-content-center d-flex">
-                <li>
-                    <a href="https://linkedin.com" target="_blank">
-                        <i class="fa-brands fa-linkedin"></i></a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/" target="_blank">
-                        <i class="fa-brands fa-square-facebook"></i></a>
-                </li>
-            </ul>
-        </div>
-    </footer>
+<footer class="fixed-bottom">
+    <div class="container pb-0">
+        <ul class="col-12 list-unstyled justify-content-center d-flex">
+            <li>
+                <a href="https://linkedin.com" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank">
+                    <i class="fa-brands fa-square-facebook"></i></a>
+            </li>
+        </ul>
+    </div>
+</footer>
 </body>
 </html>
