--- a/illustrator.html
+++ b/illustrator.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row mb-md-5">
             <div class="col-12 col-md-6">
                 <div class="row pb-5">
                     <div class="col-1"></div>
@@ -105,7 +105,7 @@
     </div>
 </main>
 
-<footer>
+<footer class="fixed-bottom">
     <div class="container pb-0">
         <ul class="col-12 list-unstyled justify-content-center d-flex">
             <li>
