--- a/contact.html
+++ b/contact.html
@@ -107,54 +107,54 @@
             </div>
             <div class="col-6"></div>
         </div>
-        <div class="row">
+        <div class="row icons">
             <div class="col-md-1"></div>
             <div class="col-12 col-md-2">
                 <div class="row pb-4">
-                    <div class="col-3 col-md-0"></div>
-                    <div class="col-6 col-md-12">
+                    <div class="col-4 col-md-0"></div>
+                    <div class="col-4 col-md-12">
                         <a><i id="email" class="fa-solid fa-envelope"></i></a>
                     </div>
-                    <div class="col-3 col-md-0"></div>
+                    <div class="col-4 col-md-0"></div>
                 </div>
             </div>
 
             <div class="col-12 col-md-2">
                 <div class="row pb-4">
-                    <div class="col-3 col-md-0"></div>
-                    <div class="col-6 col-md-12">
+                    <div class="col-4 col-md-0"></div>
+                    <div class="col-4 col-md-12">
                         <a><i id="phone" class="fa-solid fa-phone"></i></a>
                     </div>
-                    <div class="col-3 col-md-0"></div>
+                    <div class="col-4 col-md-0"></div>
                 </div>
             </div>
 
             <div class="col-12 col-md-2">
                 <div class="row pb-4">
-                    <div class="col-3 col-md-0"></div>
-                    <div class="col-6 col-md-12">
+                    <div class="col-4 col-md-0"></div>
+                    <div class="col-4 col-md-12">
                         <a href="https://www.facebook.com/karo.voets" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
                     </div>
-                    <div class="col-3 col-md-0"></div>
+                    <div class="col-4 col-md-0"></div>
                 </div>
             </div>
 
             <div class="col-12 col-md-2">
                 <div class="row pb-4">
-                    <div class="col-3 col-md-0"></div>
-                    <div class="col-6 col-md-12">
+                    <div class="col-4 col-md-0"></div>
+                    <div class="col-4 col-md-12">
                         <a href="https://www.instagram.com/karovoets/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     </div>
-                    <div class="col-3 col-md-0"></div>
+                    <div class="col-4 col-md-0"></div>
                 </div>
             </div>
             <div class="col-12 col-md-2">
                 <div class="row pb-4">
-                    <div class="col-3 col-md-0"></div>
-                    <div class="col-6 col-md-12">
+                    <div class="col-4 col-md-0"></div>
+                    <div class="col-4 col-md-12">
                         <a href="https://www.linkedin.com/in/karo-voets-731096261/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <div class="col-3 col-md-0"></div>
+                    <div class="col-4 col-md-0"></div>
                 </div>
             </div>
             <div class="col-md-1"></div>
@@ -162,7 +162,7 @@
     </div>
 </main>
 
-<footer>
+<footer class="fixed-bottom">
     <div class="container pb-0">
         <ul class="col-12 list-unstyled justify-content-center d-flex">
             <li>
