--- a/wpl.html
+++ b/wpl.html
@@ -139,7 +139,7 @@
     </div>
 </main>
 
-<footer>
+<footer class="fixed-bottom">
     <div class="container pb-0">
         <ul class="col-12 list-unstyled justify-content-center d-flex">
             <li>
