script + details + eindreflectie

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="col-7"></div>
                 </div>
             </div>
-            <div class="col-12 order-md-2 col-md-6 foto">
+            <div class="col-12 order-md-2 col-md-6 foto mb-5">
                 <img id="ik" src="assets/mezelf.png" alt="Foto van mezelf">
             </div>
         </div>
