--- a/wpl.html
+++ b/wpl.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row mb-md-5">
             <div class="col-12 col-md-6">
                 <div class="row pb-5">
                     <div class="col-1"></div>
@@ -124,12 +124,12 @@
                     <div class="col-1"></div>
                 </div>
             </div>
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 mb-5">
                 <div class="row pb-5">
                     <div class="col-1"></div>
                     <div class="col-10">
-                        <a href="assets/Eindreflectie2_Karo_Voets_1DVOB.pdf" download="Eindreflectie_Karo_Voets_1DVOB" target="_blank">
-                            <img class="wpl_img" src="assets/Eindreflectie2.png" alt="Eindreflectie">
+                        <a href="assets/PDF/Eindreflectie_WPL2_Karo_Voets.pdf" download="Eindreflectie2_Karo_Voets_1DVOB" target="_blank">
+                            <img class="wpl_img" src="assets/reflectie2.png" alt="Eindreflectie">
                         </a>
                     </div>
                     <div class="col-1"></div>
