--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-4 pt-4 pb-5 pt-md-0">
+            <div class="col-12 col-md-4 pt-4 pb-5 pt-md-0 mb-5 mb-md-0">
                 <div class="row">
                     <div class="col-2 col-md-0"></div>
                     <div class="col-8 col-md-9">
