--- a/contact.html
+++ b/contact.html
@@ -13,62 +13,9 @@
             crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/2fb07d68d9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="contact.css">
+    <script defer src="contact.js"></script>
 </head>
 <body>
-<!--
-<nav class="navbar navbar-expand-lg">
-
-    <div class="container">
-        <a href="index.html" class="navbar-brand">
-            <img id="nav" src="assets/Logo.png" alt="logo">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fa-solid fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link homepage" target="_self" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" target="_self" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link webshop" target="_self" href="mywork.html">My work</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link contactlink" target="_self" href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<main>
-    <h1>CONTACT ME</h1>
-    <div class="icons">
-        <section>
-            <a><i id="email" class="fa-solid fa-envelope"></i></a>
-            <p>karovoets@hotmail.com</p>
-        </section>
-        <section>
-            <a><i id="phone" class="fa-solid fa-phone"></i></a>
-            <p>0498475237</p>
-        </section>
-        <section>
-            <a href="https://www.facebook.com/karo.voets" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
-        </section>
-        <section>
-            <a href="https://www.instagram.com/karovoets/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-        </section>
-        <section>
-            <a href="https://www.linkedin.com/in/karo-voets-731096261/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-        </section>
-    </div>
-</main>
--->
-
 <nav class="navbar navbar-expand-lg">
 
     <div class="container">
@@ -148,7 +95,7 @@
                     <div class="col-4 col-md-0"></div>
                 </div>
             </div>
-            <div class="col-12 col-md-2">
+            <div class="col-12 col-md-2 mb-5">
                 <div class="row pb-4">
                     <div class="col-4 col-md-0"></div>
                     <div class="col-4 col-md-12">
