--- a/illustrator.html
+++ b/illustrator.html
@@ -92,7 +92,7 @@
                     <div class="col-1"></div>
                 </div>
             </div>
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 mb-5">
                 <div class="row pb-5">
                     <div class="col-1"></div>
                     <div class="col-10">
