--- a/mywork.html
+++ b/mywork.html
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-2">
-                <div class="row pb-4">
+                <div class="row pb-4 mb-5">
                     <div class="col-3 col-md-0"></div>
                     <div class="col-6 col-md-12">
                         <button type="button" class="btn">
