--- a/xd.html
+++ b/xd.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row mb-md-5">
             <div class="col-12 col-md-6">
                 <div class="row pb-5">
                     <div class="col-1"></div>
@@ -90,7 +90,7 @@
                     <div class="col-1"></div>
                 </div>
             </div>
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 mb-5">
                 <div class="row pb-5">
                     <div class="col-1"></div>
                     <div class="col-10">
