--- a/photoshop.html
+++ b/photoshop.html
@@ -67,7 +67,7 @@
                 <div class="row pb-5">
                     <div class="col-1"></div>
                     <div class="col-10">
-                        <img src="assets/tea.png" alt="Thee reclame">
+                        <img src="assets/plaincrash.png" alt="vliegtuigcrash">
                     </div>
                     <div class="col-1"></div>
                 </div>
@@ -109,11 +109,11 @@
     <div class="container pb-0">
         <ul class="col-12 list-unstyled justify-content-center d-flex">
             <li>
-                <a href="https://linkedin.com" target="_blank">
+                <a href="https://www.linkedin.com/in/karo-voets-731096261/" target="_blank">
                     <i class="fa-brands fa-linkedin"></i></a>
             </li>
             <li>
-                <a href="https://www.facebook.com/" target="_blank">
+                <a href="https://www.facebook.com/karo.voets" target="_blank">
                     <i class="fa-brands fa-square-facebook"></i></a>
             </li>
         </ul>
