--- a/wpl.html
+++ b/wpl.html
@@ -63,6 +63,13 @@
             <div class="col-6"></div>
         </div>
         <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4">
+                <h2>Werkplekleren 1 & 2</h2>
+            </div>
+            <div class="col-4"></div>
+        </div>
+        <div class="row">
             <div class="col-12 col-md-6">
                 <div class="row pb-5">
                     <div class="col-1"></div>
@@ -120,6 +127,37 @@
                         </a>
                         <button type="button" class="btn guide">
                             <a href="assets/PDF/Brandguide_Ori.pdf" download="Brandguide_Ori_Karo_Voets">Download hier de brandguide</a></button>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 mb-5">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <a href="assets/PDF/Eindreflectie_WPL2_Karo_Voets.pdf" download="Eindreflectie2_Karo_Voets_1DVOB" target="_blank">
+                            <img class="wpl_img" src="assets/reflectie2.png" alt="Eindreflectie">
+                        </a>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4">
+                <h2>Werkplekleren 3</h2>
+            </div>
+            <div class="col-4"></div>
+        </div>
+        <div class="row mb-md-5">
+            <div class="col-12 col-md-6">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <a href="assets/PDF/WPL2_Case_Karo_Voets.pdf" download="WPL2_Case_Karo_Voets" target="_blank">
+                            <img class="wpl_img" src="assets/Logo_Groot.png" alt="Dashboard">
+                        </a>
                     </div>
                     <div class="col-1"></div>
                 </div>
