--- a/wpl.html
+++ b/wpl.html
@@ -155,8 +155,8 @@
                 <div class="row pb-5">
                     <div class="col-1"></div>
                     <div class="col-10">
-                        <a href="assets/PDF/WPL2_Case_Karo_Voets.pdf" download="WPL2_Case_Karo_Voets" target="_blank">
-                            <img class="wpl_img" src="assets/Logo_Groot.png" alt="Dashboard">
+                        <a href="assets/PDF/Karo_Voets_2DVOA_OpdrachtKernkwadrant.pdf" download="Kernkwadranten_Karo_Voets_2DVOA" target="_blank">
+                            <img class="wpl_img" src="assets/kernkwadrant2dvoa.png" alt="kernkwadranten">
                         </a>
                     </div>
                     <div class="col-1"></div>
@@ -166,8 +166,56 @@
                 <div class="row pb-5">
                     <div class="col-1"></div>
                     <div class="col-10">
-                        <a href="assets/PDF/Eindreflectie_WPL2_Karo_Voets.pdf" download="Eindreflectie2_Karo_Voets_1DVOB" target="_blank">
-                            <img class="wpl_img" src="assets/reflectie2.png" alt="Eindreflectie">
+                        <a href="assets/PDF/Karo_Voets_2DVOA_IndividueleReflectie.pdf" download="IndividueleReflectie_Karo_Voets_2DVOA" target="_blank">
+                            <img class="wpl_img" src="assets/individuele2dvoa.png" alt="individuele reflectie">
+                        </a>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-md-5">
+            <div class="col-12 col-md-6">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <a href="assets/PDF/Karo_Voets_2DVOA_Pitch.pdf" download="Pitch_Karo_Voets_2DVOA" target="_blank">
+                            <img class="wpl_img" src="assets/pitch2dvoa.png" alt="Pitch">
+                        </a>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 mb-5">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <a href="assets/PDF/Karo_Voets_2DVOA_TussentijdseReflectie.pdf" download="TussentijdseReflectie_Karo_Voets_2DVOA" target="_blank">
+                            <img class="wpl_img" src="assets/tussentijds2dvoa.png" alt="Tussentijdse reflectie">
+                        </a>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-md-5">
+            <div class="col-12 col-md-6">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <a href="assets/PDF/Karo_Voets_2DVOA_Probleemsituaties.pdf" download="Probleemsituaties_Karo_Voets_2DVOA" target="_blank">
+                            <img class="wpl_img" src="assets/probleem2dvoa.png" alt="Probleemsituaties">
+                        </a>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 mb-5">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <a href="assets/PDF/Karo_Voets_DVOA_Eindreflectie.pdf" download="EindReflectie_Karo_Voets_2DVOA" target="_blank">
+                            <img class="wpl_img" src="assets/eindreflectie2dvoa.png" alt="Eindreflectie">
                         </a>
                     </div>
                     <div class="col-1"></div>
