--- a/wpl.html
+++ b/wpl.html
@@ -146,7 +146,7 @@
         <div class="row">
             <div class="col-4"></div>
             <div class="col-4">
-                <h2>Werkplekleren 3</h2>
+                <h2>Werkplekleren 3 & 4</h2>
             </div>
             <div class="col-4"></div>
         </div>
@@ -216,6 +216,54 @@
                     <div class="col-10">
                         <a href="assets/PDF/Karo_Voets_DVOA_Eindreflectie.pdf" download="EindReflectie_Karo_Voets_2DVOA" target="_blank">
                             <img class="wpl_img" src="assets/eindreflectie2dvoa.png" alt="Eindreflectie">
+                        </a>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-md-5">
+            <div class="col-12 col-md-6">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <a href="assets/PDF/X-factor_KaroVoets_2DVOA.pdf" download="X-factor_KaroVoets_2DVOA" target="_blank">
+                            <img class="wpl_img" src="assets/X-factor.png" alt="X-factor">
+                        </a>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 mb-5">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <a href="assets/PDF/X-factor_Presentaties_KaroVoets_2DVOA.pdf" download="Reflectie_X-factor_Klasgenoten_KaroVoets_2DVOA" target="_blank">
+                            <img class="wpl_img" src="assets/X-factor_presentaties.png" alt="X-factor presentaties">
+                        </a>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-md-5">
+            <div class="col-12 col-md-6">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <a href="assets/PDF/WPL4_Eindreflectie_Karo_Voets.pdf" download="WPL4_Eindreflectie_Karo_Voets" target="_blank">
+                            <img class="wpl_img" src="assets/Eindreflectie_WPL4.png" alt="Eindreflectie WPL4">
+                        </a>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 mb-5">
+                <div class="row pb-5">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <a href="assets/PDF/Onstage_Verwijzingen_Karo_Voets.pdf" download="Onstage_Verwijzingen_Karo_Voets" target="_blank">
+                            <img class="wpl_img" src="assets/onstage.png" alt="Onstage verwijzingen">
                         </a>
                     </div>
                     <div class="col-1"></div>
