--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                 <div class="row">
                     <div class="col-1"></div>
                     <div class="col-10">
-                        <p>Welkom op mijn portfolio. Ik kijk er naar uit om in contact te komen met u. Als dit niet het
-                            geval is en ik zie u nooit meer terug, dan wens ik u het beste toe.</p>
+                        <p>Welcome to my portfolio. I look forward to getting in touch with you.</p>
                     </div>
                     <div class="col-1"></div>
                 </div>
