--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <div class="row button_cv">
                     <div class="col-1"></div>
                     <div class="col-4 cv">
-                        <a href="assets/Curriculum_Vitae_Karo_Voets.pdf" download="CURRICULUM_VITAE_Karo_Voets">Mijn
-                            CV</a>
+                        <a href="assets/Curriculum_Vitae_Karo_Voets.pdf" download="CURRICULUM_VITAE_Karo_Voets">My
+                            resume</a>
                     </div>
                     <div class="col-7"></div>
                 </div>
